--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AutoWealth AI - Automated Trading Assistant",
-  "short_name": "AutoWealth AI",
+  "name": "TRADER AI - Automated Trading Assistant",
+  "short_name": "TRADER AI",
   "description": "AI-powered trading assistant that generates passive income while you sleep. Join 847,000+ users earning $2,847 weekly on average.",
   "start_url": "/",
   "display": "standalone",
