--- a/manifest.json
+++ b/manifest.json
@@ -1,78 +1,75 @@
 {
-  "name": "TRADER AI - Automated Trading Assistant",
-  "short_name": "TRADER AI",
-  "description": "AI-powered trading assistant that generates passive income while you sleep. Join 847,000+ users earning $2,847 weekly on average.",
+  "name": "Bitcoin 360 AI - Advanced Crypto Trading Platform",
+  "short_name": "Bitcoin 360 AI",
+  "description": "The world's most advanced crypto trading platform. AI-powered Bitcoin and cryptocurrency trading with automated algorithms. Join 847,000+ traders earning daily profits.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1a365d",
-  "theme_color": "#1a365d",
+  "background_color": "#0a0a0a",
+  "theme_color": "#f7931a",
   "orientation": "portrait-primary",
   "scope": "/",
-  "categories": ["finance", "productivity", "business"],
   "lang": "en",
   "dir": "ltr",
+  "categories": ["finance", "business", "productivity"],
   "icons": [
+    {
+      "src": "icons/icon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
     {
       "src": "icons/icon-72x72.png",
       "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-96x96.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-128x128.png",
       "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-144x144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-152x152.png",
       "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-384x384.png",
       "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icons/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ],
   "shortcuts": [
     {
-      "name": "View Dashboard",
-      "short_name": "Dashboard",
-      "description": "Check your trading performance and profits",
-      "url": "/app.html?view=dashboard",
+      "name": "Start Trading",
+      "short_name": "Trade",
+      "description": "Start Bitcoin trading with AI",
+      "url": "/",
       "icons": [
         {
           "src": "icons/icon-96x96.png",
@@ -81,10 +78,10 @@
       ]
     },
     {
-      "name": "Withdraw Funds",
-      "short_name": "Withdraw",
-      "description": "Access your trading profits",
-      "url": "/app.html?view=withdraw",
+      "name": "Demo Trading",
+      "short_name": "Demo",
+      "description": "Try the demo trading platform",
+      "url": "/?demo=true",
       "icons": [
         {
           "src": "icons/icon-96x96.png",
@@ -95,12 +92,17 @@
   ],
   "screenshots": [
     {
-      "src": "icons/icon-512x512.png",
+      "src": "images/screen.png",
+      "sizes": "1280x720",
       "type": "image/png",
-      "sizes": "512x512",
-      "form_factor": "narrow"
+      "form_factor": "wide",
+      "label": "Bitcoin 360 AI Trading Platform"
     }
   ],
+  "related_applications": [],
   "prefer_related_applications": false,
-  "related_applications": []
+  "protocol_handlers": [],
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 } 
