--- a/vercel.json
+++ b/vercel.json
@@ -63,5 +63,13 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/affiliate.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "env": {
+    "AFFILIATE_URL": "@affiliate-url"
+  }
 } 
